--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,16 @@
     --light-shade: #ffffff;
     --medium-shade: #d9d9d9;
     --dark-shade: #353535;
-    --primary-color: #3c6e71;
-    --secondary-color: #284b63;
+    --primary-color: #ee6352;
+    --secondary-color: #08b2e3;
     /* global sizing for fonts, padding and margins */
     --font-size-base: 16px;
     --spacing-base: 8px;
+}
+
+* {
+    /* set global margin to 0 so we can make custom margins for each component */
+    margin: 0 auto;
+    /* global font family (change if you want) */
+    font-family: Arial, Helvetica, sans-serif;
 }
